--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>GDE Profile Badge Generator</title>
-<meta name="description" content="GDE Profile Badge Generator">
-<meta property="og:image" content="https://gde-badge.limhenry.xyz/cover.png" />
+<title>Google Developer Profile URL Cover Generator</title>
+<meta name="description" content="Google Developer Profile URL Cover Generator">
+<meta property="og:image" content="https://gdev.limhenry.xyz/cover.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="./favicon.png">
-<link crossorigin="anonymous" href="https://fonts.googleapis.com/icon?family=Google+Sans:400&display=swap" rel="stylesheet" />
+<link crossorigin="anonymous" href="https://fonts.googleapis.com/icon?family=Google+Sans:400,500&display=swap" rel="stylesheet" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-57741199-15"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -52,56 +52,12 @@
     flex: 1;
   }
 
-  .drop-area {
-    pointer-events: none;
-    opacity: 0;
-    position: absolute;
-    top: 12px;
-    left: 12px;
-    right: 12px;
-    bottom: 12px;
-    border-radius: 12px;
-    border: 3px dashed #202020;
-    background-color: rgba(0, 0, 0, .4);
-    z-index: 10;
-    display: grid;
-    place-items: center;
-    color: #fff;
-    font-weight: 700;
-    font-size: 24px;
-    transition: 150ms opacity ease;
-  }
-
-  .drop-area[active] {
-    opacity: 1;
-  }
-
   .input-panel {
     padding: 24px;
     width: 40%;
     max-width: 420px;
     background-color: #f5f5f5;
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .12);
-  }
-
-  .input-panel .advanced-input {
-    display: none;
-  }
-
-  .input-panel .advanced-button span::after {
-    content: 'Show Advanced Control';
-  }
-
-  .input-panel[advanced] .advanced-input {
-    display: flex;
-  }
-
-  .input-panel[advanced] .advanced-button svg {
-    transform: rotate(180deg);
-  }
-
-  .input-panel[advanced] .advanced-button span::after {
-    content: 'Hide Advanced Control';
   }
 
   .input {
@@ -121,24 +77,7 @@
     font-weight: 500;
   }
 
-  .button {
-    color: #fff;
-    font-size: 15px;
-    border-radius: 4px;
-    padding: 10px 12px;
-    box-shadow: var(--shadow-elevation-1);
-    background-color: var(--button-color);
-    cursor: pointer;
-    border: none;
-    transition: box-shadow 100ms ease, background-color 100ms ease;
-  }
-
-  .button:hover {
-    box-shadow: var(--shadow-elevation-2);
-    background-color: var(--button-color-hover);
-  }
-
-  input.category-input {
+  input.url-input {
     font-size: 15px;
     padding: 8px;
     background: #fff;
@@ -148,47 +87,9 @@
     max-width: 360px;
   }
 
-  input.category-input:focus {
+  input.url-input:focus {
     outline: none;
     border-color: #8e8e8e;
-  }
-
-  .select-container {
-    display: flex;
-    border-radius: 4px;
-    border: 1px solid #cacaca;
-    overflow: hidden;
-  }
-
-  .select-container .select {
-    background-color: #fff;
-    padding: 6px 12px;
-    font-size: 15px;
-    cursor: pointer;
-    transition: background-color 100ms ease;
-  }
-
-  .select-container .select:not(:last-child) {
-    border-right: 1px solid #cacaca;
-  }
-
-  .select-container .select[selected] {
-    color: #fff;
-    background-color: var(--button-color);
-  }
-
-  .advanced-button {
-    display: inline-flex;
-    color: var(--button-color);
-    font-weight: 700;
-    font-size: 14px;
-    align-items: center;
-    cursor: pointer;
-    margin-bottom: 12px;
-  }
-
-  .advanced-button:hover {
-    color: #0e50bf;
   }
 
   .preview-panel {
@@ -201,7 +102,7 @@
   }
 
   canvas {
-    width: 500px;
+    width: 2160px;
     max-width: 80%;
   }
 
@@ -254,63 +155,14 @@
 </style>
 
 <header>
-  <div class="title">GDE Profile Badge Generator</div>
+  <div class="title">Google Developer Profile Cover Generator</div>
 </header>
 
 <div class="main-container">
-  <div class="drop-area">
-    Drop your image here
-  </div>
   <div class="input-panel">
     <div class="input">
-      <label>Profile Picture</label>
-      <button class="button" onclick="uploadImage()">Upload Image</button>
-      <input class="profile-input" type="file" accept="image/*" onchange="upload(event)" hidden />
-    </div>
-    <div class="input">
-      <label for="category">Category Name</label>
-      <input id="category" list="gde-category" class="category-input" type="text" oninput="draw()" />
-      <datalist id="gde-category">
-        <option value="Android">
-        <option value="Angular">
-        <option value="Assistant">
-        <option value="Dart">
-        <option value="Firebase">
-        <option value="Flutter">
-        <option value="G Suite">
-        <option value="Go">
-        <option value="Google Cloud">
-        <option value="Google Maps">
-        <option value="IoT">
-        <option value="Kotlin">
-        <option value="Machine Learning">
-        <option value="Payments">
-        <option value="Web">
-      </datalist>
-    </div>
-    <div class="input">
-      <label>Image Shape</label>
-      <div class="select-container">
-        <div class="select" id="original" selected onclick="changeShape('original')">Original</div>
-        <div class="select" id="square" onclick="changeShape('square')">Square</div>
-        <div class="select" id="circle" onclick="changeShape('circle')">Circle</div>
-      </div>
-    </div>
-    <div class="input advanced-input">
-      <label for="xPos">Image X Position</label>
-      <input class="category-input" id="xPos" type="number" value="0" onkeyup="posChanged(event, 'x')">
-    </div>
-    <div class="input advanced-input">
-      <label for="yPos">Image Y Position</label>
-      <input class="category-input" id="yPos" type="number" value="0" onkeyup="posChanged(event, 'y')">
-    </div>
-    <div class="input advanced-input">
-      <label for="zoom">Image Zoom Level</label>
-      <input class="category-input" id="zoom" type="number" value="1" onkeyup="posChanged(event, 'zoom')">
-    </div>
-    <div class="advanced-button" onclick="toggleAdvancedControl()">
-      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
-      <span></span>
+      <label for="url">Google Developer Profile URL</label>
+      <input id="url" class="url-input" type="url" oninput="draw()" value="g.dev/henry" />
     </div>
   </div>
   <div class="preview-panel">
@@ -328,174 +180,38 @@
 <script>
   const canvas = document.querySelector('canvas')
   const ctx = canvas.getContext('2d')
-  let image = ''
-  let shape = 'original'
-  let isDragging = false
-  let imgX = 0
-  let imgY = 0
-  let zoom = 1
-
-  const body = document.querySelector('body')
-  body.addEventListener('dragenter', (e) => {
-    e.preventDefault()
-    e.stopPropagation()
-    document.querySelector('.drop-area').setAttribute('active', '')
-  }, false)
-
-  body.addEventListener('dragleave', (e) => {
-    e.preventDefault()
-    e.stopPropagation()
-    document.querySelector('.drop-area').removeAttribute('active')
-  }, false)
-
-  body.addEventListener('dragover', (e) => {
-    e.preventDefault()
-    e.stopPropagation()
-    document.querySelector('.drop-area').setAttribute('active', '')
-  }, false)
-
-  body.addEventListener('drop', (e) => {
-    e.preventDefault()
-    e.stopPropagation()
-    document.querySelector('.drop-area').removeAttribute('active')
-    if (e && e.dataTransfer.files && e.dataTransfer.files[0]) {
-      uploadFile(e.dataTransfer.files[0])
-    }
-  }, false)
-
-  const posChanged = (e, type) => {
-    if (type === 'x') imgX = e.target.value
-    if (type === 'y') imgY = e.target.value
-    if (type === 'zoom') zoom = e.target.value
-    draw()
-  }
-
-  const toggleAdvancedControl = () => {
-    document.querySelector('.input-panel').toggleAttribute('advanced')
-  }
-
-  const uploadImage = () => {
-    document.querySelector('input.profile-input').click()
-  }
-
-  const changeShape = (type) => {
-    const original = document.querySelector('.select-container .select#original')
-    const square = document.querySelector('.select-container .select#square')
-    const circle = document.querySelector('.select-container .select#circle')
-    shape = type
-    switch (type) {
-      case 'original': {
-        original.setAttribute('selected', '')
-        square.removeAttribute('selected')
-        circle.removeAttribute('selected')
-        break
-      }
-      case 'square': {
-        square.setAttribute('selected', '')
-        original.removeAttribute('selected')
-        circle.removeAttribute('selected')
-        break
-      }
-      case 'circle': {
-        circle.setAttribute('selected', '')
-        original.removeAttribute('selected')
-        square.removeAttribute('selected')
-        break
-      }
-    }
-    draw()
-  }
-
-  const upload = (e) => {
-    if (e && e.target.files && e.target.files[0]) {
-      uploadFile(e.target.files[0])
-    }
-  }
-
-  const uploadFile = (file) => {
-    const reader = new FileReader()
-    reader.onload = (event) => {
-      const img = new Image()
-      img.onload = () => {
-        image = img
-        draw()
-      }
-      img.src = event.target.result
-    }
-    reader.readAsDataURL(file)
-  }
 
   const banner = new Image()
-  banner.src = './experts.svg'
+  banner.src = './profile-cover.png'
   banner.onload = () => {
     draw()
   }
 
   const draw = () => {
-    const category = document.querySelector('input.category-input').value || 'Category Name'
+    const url = document.querySelector('input.url-input').value || 'g.dev/henry'
 
-    if (image) {
-      switch (shape) {
-        case 'original': {
-          canvas.width = image.width
-          canvas.height = image.height
-          ctx.save()
-          ctx.translate(imgX * zoom, imgY * zoom)
-          ctx.scale(zoom, zoom)
-          ctx.drawImage(image, 0, 0)
-          ctx.restore()
-          break
-        }
-        default: {
-          const size = Math.min ( image.width, image.height )
-          canvas.width = 500
-          canvas.height = 500
-          const hRatio = canvas.width / image.width
-          const vRatio = canvas.height / image.height
-          const ratio  = Math.max ( hRatio, vRatio )
-          const x = ( canvas.width - image.width * ratio ) / 2
-          const y = ( canvas.height - image.height * ratio ) / 2
-          ctx.save()
-          ctx.translate(imgX * zoom, imgY * zoom)
-          ctx.scale(zoom, zoom)
-          ctx.drawImage(image, 0, 0, image.width, image.height, x, y, image.width * ratio, image.height * ratio)
-          ctx.restore()
-          break
-        }
-      }
-    }
-    else {
-      ctx.canvas.width = 500
-      ctx.canvas.height = 500
-      ctx.fillStyle = '#0d47a1'
-      ctx.fillRect(0, 0, canvas.width, canvas.height)
-    }
+    ctx.canvas.width = 2160
+    ctx.canvas.height = 1080
+    ctx.fillStyle = '#0d47a1'
+    ctx.fillRect(0, 0, canvas.width, canvas.height)
 
     const height = banner.height / banner.width * canvas.width
     const y = canvas.height - height
-    const fontSize = canvas.width / 17.2
-    const fontY = y + height * 0.7
+    const fontSize = canvas.width / 22.75
+    const fontY = y + height * 0.445
     ctx.drawImage(banner, 0, 0, banner.width, banner.height, 0, y, canvas.width, height)
 
-    ctx.fillStyle = '#757575'
+    ctx.fillStyle = '#1d71ee'
     ctx.textAlign = 'center'
     ctx.textBaseline = 'middle'
-    ctx.font = `${fontSize}px Google Sans, sans-serif`
-    ctx.fillText(category, canvas.width / 2, fontY)
-
-    if (shape === 'circle') {
-      ctx.globalCompositeOperation='destination-in'
-      ctx.beginPath()
-      ctx.arc(canvas.width / 2, canvas.height / 2, canvas.height / 2, 0, Math.PI * 2)
-      ctx.closePath()
-      ctx.fill()
-    }
+    ctx.font = `500 ${fontSize}px Google Sans, sans-serif`
+    ctx.fillText(url, canvas.width / 2, fontY)
   }
 
   const download = () => {
     const a = document.createElement('a')
     const url = canvas.toDataURL('image/png;base64')
-    a.download = 'badge.png'
+    a.download = 'gdev-url-cover.png'
     a.href = url
     a.click()
   }
