--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="./favicon.png">
 <link crossorigin="anonymous" href="https://fonts.googleapis.com/icon?family=Google+Sans:400,500&display=swap" rel="stylesheet" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-57741199-15"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P0MB0E37TB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-57741199-15');
+  gtag('config', 'G-P0MB0E37TB');
 </script>
 <style>
   * {
